--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         </p>
         以向我们证实您的身份
       </div>
-      <button id="submit-button" class="btn" onclick="onButtonClick()">
-        我已发送
-      </button>
+      <button id="submit-button" class="btn">我已发送</button>
       <div class="my-4 text-sm text-center">
         <p id="bottom-text" class="">
           验证码在两分钟内有效<br />
