feat: add service worker

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </p>
       </div>
       <script type="module" src="/src/js/main.js"></script>
+      <script src="./registerSW.js"></script>
     </div>
   </body>
 </html>
