feat: support uid api

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <p class="text-xl">枝网OAuth</p>
       <div id="board">
         <span>
-          向b站机器人账号
+          向机器人账号
           <a
             target="_blank"
             class="cursor-pointer font-bold text-blue-500"
             onclick="openChat()"
           >
-            bili_oauth
+            [点击这里跳转]
           </a>
           发送私信
         </span>
@@ -42,8 +42,9 @@
           授权后表明您已同意
           <a href="" target="_blank" class="text-blue-500">服务协议 </a>
           <br />
-          如果您无法正常登陆<br />
-          请不要频繁向机器人账号发送验证私信
+          <b class="text-sm text-gray-500 dark:text-gray-400">
+            如果您无法正常登陆<br />请不要频繁向机器人账号发送验证私信</b
+          >
         </p>
       </div>
       <script type="module" src="/src/js/main.js"></script>
